AC_INIT(coopt.c)
AM_INIT_AUTOMAKE(coopt, 1.0.0)

dnl We want to have things in /usr/lib, /usr/include, etc.
AC_PREFIX_DEFAULT(/usr)

dnl Find the programs we need for building, and configure as necessary
AC_PROG_CC
mdw_GCC_FLAGS
AC_CHECK_PROG(AR, ar, ar)
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Look for library and header-related things
AC_HEADER_STDC

dnl Fix up any problems with types
AC_C_CONST
AC_TYPE_SIZE_T

dnl If strstr() doesn't exist, use our own
AC_REPLACE_FUNCS(strstr)
dnl Note that we ought to do this for strtok() as well
dnl AC_REPLACE_FUNCS(strtok)
dnl However we don't, because I can't face writing it currently ...

AC_OUTPUT(Makefile)
